Updated with collections tweaks from the last week of implementing in production code base